# resume-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: tests.yaml
src/: employment.rs  events.rs  keymap.rs  main.rs  settings.rs  state.rs
src/assets/: banner.rs
src/ui/: about_me.rs  banner.rs  contact_details.rs  employment.rs  keymap.rs  loading.rs  mod.rs  tabs.rs
