[package]
name = "Aran-CV"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tui = "0.19.0"
tokio = { version = "1", features = ["full"] }
aws-config = "1.8.3"
aws-sdk-s3 = "1.100.0"
clap = { version = "4", features = ["derive"] }
